--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-name: Tom Kalisky - Mechanical Engineering Graduate Student at UCSD
+name: Tom Kalisky _ Mechanical Engineering Graduate Student at UCSD
 	markdown: kramdown
